Added plugin to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ sass:
   style: compressed
   sourcemap: development
 # possible values: nested expanded compact compressed
+
+plugins:
+  - jekyll-last-modified
